--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/three": "^0.173.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "add": "^2.0.6",
     "axios": "^1.7.9",
